<resources>
    <string name="app_name">Delivery</string>

    <string name="nav_title_order">Order</string>
    <string name="nav_title_location">Location</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_profile">Profile</string>
    <string name="nav_title_license">License</string>

    <string name="error_resolve_activity_failed">No application to handle this action.</string>

    <!-- Error layout -->
    <string name="load_error_retry">Retry</string>

    <!-- Loading Error -->
    <string name="loading_error_title">No connection</string>
    <string name="loading_error_content">Please check your internet connection and try again.</string>

    <!-- Paging -->
    <string name="load_state_retry">Retry</string>

    <!-- Permission -->
    <string name="request_location_permission_message">Require location permission for tracking.</string>
    <string name="request_camera_permission_message">Require camera permission for scanning.</string>
    <string name="request_permission_action_settings">Settings</string>

    <!-- Auth -->
    <string name="auth_input_title">Login</string>
    <string name="auth_input_description">Login using your Foobar++ delivery account.</string>
    <string name="auth_input_hint_email">Email</string>
    <string name="auth_input_hint_password">Password</string>
    <string name="auth_input_confirm">Login</string>
    <string name="auth_input_skip">Skip</string>
    <string name="auth_input_email_empty">Please enter your email to login.</string>
    <string name="auth_input_password_empty">Please enter your password to login.</string>

    <string name="auth_verify_title">Signing in</string>
    <string name="auth_verify_description">Please wait while signing in.</string>
    <string name="auth_verify_no_email">Didn\'t receive the email?&#160;</string>
    <string name="auth_verify_resend_email">Resend Email</string>
    <string name="auth_error_message">Sign-in error. Please try again.</string>
    <string name="auth_cancel_message">Sign-in canceled.</string>
    <string name="auth_signed_in_message">Already signed in.</string>
    <string name="auth_email_resend_timer_message">Please try a few seconds later.</string>
    <string name="auth_signed_out_message">Auth error.</string>
    <string name="auth_not_signed_in_message">Not signed in.</string>

    <!-- Settings -->
    <string name="settings_account_edit_profile">View Detail</string>
    <string name="settings_section_employed_by">Employed By</string>
    <string name="settings_section_contact_us_title">Contact Us</string>
    <string name="settings_section_license_title">License</string>
    <string name="settings_section_sign_out_title">Sign Out</string>

    <!-- Profile -->
    <string name="profile_toolbar_title">My Profile</string>
    <string name="profile_edit_field_name">Name</string>
    <string name="profile_edit_field_phone_number">Phone Number</string>
    <string name="profile_edit_field_input_not_set">Not Set</string>
    <string name="profile_edit_field_input_invalid">Invalid input.</string>
    <string name="profile_require_data_for_delivery">Profile data have to be set before delivery.</string>
    <string name="profile_user_detail_updated">Profile Updated.</string>

    <!-- Sign out -->
    <string name="sign_out_dialog_title">Sign Out</string>
    <string name="sign_out_dialog_message">Do you want to sign out with the current account?</string>

    <!-- Seller Misc -->
    <string name="seller_misc_title_description">Seller Info</string>

    <!-- Location -->
    <string name="location_start_delivery_title">Pick an group order to start delivery</string>

    <!-- Section Pending -->
    <string name="section_pending_title">Start Delivery</string>
    <string name="section_pending_seller_title">From %s</string>
    <string name="section_pending_item_title">%s\n@ %s</string>
    <string name="section_pending_item_delivery_time">Deliver Before %s</string>
    <string name="section_pending_item_users_count">%d/%d Users Joined</string>
    <string name="section_pending_item_pending_message">Pending</string>
    <string name="section_pending_empty_message">No section found</string>
    <string name="section_pending_header">Upcoming Deliveries</string>

    <!-- Section Detail -->
    <string name="section_detail_delivery_time_title">Deliver On</string>
    <string name="section_detail_section_id_title">Id</string>
    <string name="section_detail_section_title_title">Order</string>
    <string name="section_detail_delivery_date_title">Date</string>
    <string name="section_detail_users_count_title">Num of Users</string>
    <string name="section_detail_users_count">%d / %d</string>
    <string name="section_detail_seller_phone_num">Tel: %s</string>
    <string name="section_detail_info_title">Order Detail</string>
    <string name="section_detail_seller_title">Restaurant</string>
    <string name="section_detail_location_title">Deliver To</string>
    <string name="section_detail_orders_title">Show User Orders</string>
    <string name="section_detail_location_map_button">View In Google Maps</string>
    <string name="section_detail_action_button_start_delivery">Start Delivery</string>
    <string name="section_detail_action_button_user_orders">View User Orders</string>
    <string name="section_detail_start_delivery_button_content_description">Show My Location</string>
    <string name="section_detail_start_delivery_confirm_dialog_title">Start Delivery</string>
    <string name="section_detail_start_delivery_confirm_dialog_message">Are you sure to start the following delivery?\n\nOrder: %s\nDeliver On: %s %s\nRestaurant: %s</string>
    <string name="section_detail_complete_delivery_confirm_dialog_title">Complete Delivery</string>
    <string name="section_detail_complete_delivery_confirm_dialog_message">Are you sure to complete the current delivery?</string>
    <string name="section_detail_cancel_delivery_confirm_dialog_title">Cancel Delivery</string>
    <string name="section_detail_cancel_delivery_confirm_dialog_message">Are you sure to cancel the current delivery?</string>
    <string name="section_detail_complete_delivery_button">Complete Delivery</string>
    <string name="section_detail_cancel_delivery_button">Cancel Delivery</string>

    <!-- Section Transit -->
    <string name="section_transit_title">Delivery</string>
    <string name="section_transit_delivery_time_left_hours">H</string>
    <string name="section_transit_delivery_time_left_minutes">Min</string>
    <string name="section_transit_delivery_time_left">%s Left - %s</string>
    <string name="section_transit_order_detail_button">Order Detail</string>

    <!-- Travel Mode -->
    <string name="travel_mode_driving">Driving</string>
    <string name="travel_mode_walking">Walking</string>
    <string name="travel_mode_dialog_title">Delivery Mode</string>
    <string name="travel_mode_updated_message">Delivery mode updated.</string>

    <!-- Arrive -->
    <string name="arrived_chip_title">Arrived Dest.</string>

    <!-- Section User -->
    <string name="section_user_toolbar_title">%d/%d Participants</string>
    <string name="section_user_list_item_items_count_text_view">#%s\t%d items in order</string>
    <string name="section_user_list_item_delivered">Delivered</string>
    <string name="section_user_list_item_pick_up">Pending</string>

    <!-- Section User Detail -->
    <string name="section_user_detail_order_info_identifier">Order #%s</string>
    <string name="section_user_detail_order_info_message">· %s</string>
    <string name="section_user_detail_order_info_total_cost">HKD $%.1f</string>
    <string name="section_user_detail_cost_title_total_cost">Total Cost</string>
    <string name="section_user_detail_cost_title_subtotal">Subtotal</string>
    <string name="section_user_detail_cost_delivery_cost">Delivery</string>
    <string name="section_user_detail_cost_format">$%.1f</string>
    <string name="section_user_detail_action_delivered_manual">Deliver\n(Manual)</string>
    <string name="section_user_detail_action_delivered_scan">Deliver\n(Scan)</string>
    <string name="section_user_detail_action_contact_user">Contact\nCustomer</string>
    <string name="section_user_detail_payment_paid">Paid</string>
    <string name="section_user_detail_payment_not_paid">Not Paid</string>
    <string name="section_user_detail_payment_title">Payment</string>
    <string name="section_user_detail_payment_notice_message">Accept payment before delivering the order.</string>
    <string name="section_user_detail_delivered_message">Order Delivered</string>

    <!-- Confirm Order Delivered -->
    <string name="confirm_order_delivered_dialog_title">Confirm Delivery</string>
    <string name="confirm_order_delivered_dialog_message">Are you sure to confirm the delivery?</string>

    <!-- Payment Methods -->
    <string name="payment_methods_title_cash_on_delivery">Cash On Delivery</string>
    <string name="payment_methods_description_cash_on_delivery">Pay when you pick up the order.</string>
    <string name="payment_methods_title_google_pay">Google Pay</string>
    <string name="payment_methods_description_google_pay">Pay online using Google Pay service.</string>

    <!-- Verify delivery -->
    <string name="verify_delivery_toolbar_title">Verify Delivery</string>
    <string name="verify_delivery_permission_missing_message">Scan to Verify Delivery</string>
    <string name="verify_delivery_scan_hint">Place code in the center.</string>

    <!-- Deliverer Info -->
    <string name="user_info_description">is waiting the order.</string>

    <!-- Confirm Start Pickup -->
    <string name="confirm_start_pickup_dialog_title">Start Pickup</string>
    <string name="confirm_start_pickup_dialog_message">Are you sure to start pick up process?</string>

</resources>