<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimarySurface"
        android:elevation="@dimen/elevation_none"
        app:elevation="@dimen/elevation_none"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/verify_delivery_toolbar_title"
            app:layout_scrollFlags="noScroll"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="?attr/colorOnPrimarySurface" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.camera.view.PreviewView
        android:id="@+id/scan_preview_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:background="?attr/colorSurface"/>

    <TextView
        android:id="@+id/scan_hint_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:padding="@dimen/spacing_medium"
        android:gravity="center"
        android:background="@drawable/scrim_scan_hint"
        android:text="@string/verify_delivery_scan_hint"
        android:textColor="?attr/colorSurface"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintStart_toStartOf="@id/scan_preview_view"
        app:layout_constraintEnd_toEndOf="@id/scan_preview_view"
        app:layout_constraintBottom_toBottomOf="@id/scan_preview_view"/>

    <LinearLayout
        android:id="@+id/permission_missing_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:attr/colorBackground"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/permission_missing_image_view"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_qr_code_scanner"
            android:contentDescription="@string/verify_delivery_permission_missing_message"
            app:tint="@color/material_on_surface_disabled"/>

        <TextView
            android:id="@+id/permission_missing_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/verify_delivery_permission_missing_message"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/material_on_surface_disabled"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>