<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/spacing_large"
    android:paddingHorizontal="@dimen/spacing_large">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/order_image_view"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="@dimen/spacing_xmedium"
        android:scaleType="centerCrop"
        app:shapeAppearance="@style/ShapeAppearance.Foobar.SmallComponent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/identifier_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Order #A58D8" />

    <TextView
        android:id="@+id/order_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xmedium"
        android:layout_marginEnd="@dimen/spacing_large"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintTop_toBottomOf="@id/identifier_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/order_image_view"
        tools:text="(1/2 @ 4:30AM) Lunch Order 午餐訂單"/>

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xmedium"
        android:layout_marginEnd="@dimen/spacing_large"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/material_on_surface_emphasis_medium"
        app:layout_constraintTop_toBottomOf="@id/order_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/order_image_view"
        tools:text="· Add more sauce, plz!"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/delivered_manual_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/section_user_detail_action_delivered_manual"
        app:icon="@drawable/ic_price_check"
        app:iconGravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delivered_scan_button"
        app:layout_constraintTop_toBottomOf="@id/message_text_view"
        tools:text="Deliver\n(Manual)"/>

    <TextView
        android:id="@+id/order_delivered_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:padding="@dimen/spacing_large"
        android:text="@string/section_user_detail_delivered_message"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorPrimary"
        android:drawablePadding="@dimen/spacing_large"
        app:drawableStartCompat="@drawable/ic_check_circle_outline"
        app:drawableTint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/message_text_view"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/delivered_scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/section_user_detail_action_delivered_scan"
        app:icon="@drawable/ic_qr_code_scanner"
        app:iconGravity="top"
        app:layout_constraintStart_toEndOf="@id/delivered_manual_button"
        app:layout_constraintEnd_toStartOf="@id/contact_user_button"
        app:layout_constraintTop_toBottomOf="@id/message_text_view"
        tools:text="Deliver\n(Scan)"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/contact_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/section_user_detail_action_contact_user"
        app:icon="@drawable/ic_call"
        app:iconGravity="top"
        app:layout_constraintStart_toEndOf="@id/delivered_scan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_text_view"
        tools:text="Contact\nCustomer"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/action_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="delivered_manual_button,delivered_scan_button,contact_user_button" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/action_view_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="delivered_manual_button,delivered_scan_button,contact_user_button,order_delivered_text_view" />

    <TextView
        android:id="@+id/total_cost_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:text="@string/section_user_detail_cost_title_total_cost"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@id/action_view_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/total_cost_text_view" />

    <TextView
        android:id="@+id/total_cost_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@id/action_view_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="HKD $149.0"/>

    <View
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spacing_xmedium"
        android:background="?attr/colorOnSurface"
        android:alpha="?attr/dividerAlphaRatio"
        app:layout_constraintTop_toBottomOf="@id/total_cost_title_text_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>